Ingress/ingress-laravel.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-laravel
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: lara.pastikerja.xyz
    http: 
      paths:
      - backend:
          serviceName: laravel
          servicePort: 80
