Ingress/ingress-pesbuk.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-fesbuk
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: pesbuk.pastikerja.xyz
    http: 
      paths:
      - backend:
          serviceName: svc-pesbuk
          servicePort: 80
